# single_piece_client

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deliverables/single_piece_ui_pyqt5_tabbed/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
deliverables/single_piece_ui_pyqt5_tabbed/app/: main_window.py  styles.qss
deliverables/single_piece_ui_pyqt5_tabbed/app/pages/: config_page.py  monitor_page.py
deliverables/single_piece_ui_pyqt5_tabbed/app/widgets/: common.py  flow_widgets.py
docs/hmi-redesign/2026-05-27/: HMI_REDESIGN_PLAN.md
packaging/: pyinstaller_linux.spec  pyinstaller_mac.spec  single-piece-client.desktop
profiles/: client_settings.json  hz_demo.json
profiles/algorithms/: default_algorithm.json
pyside6_qml_client/: .gitignore  PRODUCTION.md  README.md  pyproject.toml
pyside6_qml_client/config/: app.production.json
pyside6_qml_client/deploy/systemd/: single-piece-qml-client.service
pyside6_qml_client/qml/: Main.qml
pyside6_qml_client/qml/components/: AppButton.qml  AppPanel.qml  FlowBox.qml  IndustrialButton.qml  InfoPair.qml  KeyValueRow.qml  MetricCard.qml  Panel.qml  PrimaryButton.qml  SeparationMatrix.qml  SideNav.qml  SideNavigation.qml  StatusBadge.qml  StatusDot.qml  TopStatusBar.qml  TrendChart.qml  ValuePair.qml
pyside6_qml_client/qml/pages/: RealtimePage.qml
pyside6_qml_client/qml/styles/: Theme.qml
pyside6_qml_client/scripts/: check.sh  run.sh
pyside6_qml_client/src/single_piece_qml_client/: __init__.py  app.py  main.py  models.py
pyside6_qml_client/src/single_piece_qml_client/adapters/: __init__.py  contracts.py  mock.py
pyside6_qml_client/src/single_piece_qml_client/controllers/: __init__.py  application_controller.py
pyside6_qml_client/src/single_piece_qml_client/core/: __init__.py  app_config.py  database.py  logging_config.py  paths.py
pyside6_qml_client/src/single_piece_qml_client/domain/: __init__.py  catalogs.py
pyside6_qml_client/src/single_piece_qml_client/services/: __init__.py  control_service.py  log_service.py  state_service.py
pyside6_qml_client/tests/: test_app_config.py  test_services.py
pyside6_qml_industrial_client/: README.md  pyproject.toml
pyside6_qml_industrial_client/src/single_piece_qml_client/: __init__.py  backend.py  main.py
pyside6_qml_industrial_client/src/single_piece_qml_client/qml/: Main.qml
pyside6_qml_industrial_client/src/single_piece_qml_client/qml/components/: BeltMatrixView.qml  BottomEventPanel.qml  ConfirmDialog.qml  DeviceFlowView.qml  DeviceSegment.qml  DeviceTrackBlock.qml  FlowArrow.qml  IndustrialButton.qml  KpiCard.qml  OutputLaneBlock.qml  RightStatusPanel.qml  SectionCard.qml  SideNavigation.qml  StatusBadge.qml  StatusDot.qml  Toast.qml  TopStatusBar.qml
pyside6_qml_industrial_client/src/single_piece_qml_client/qml/pages/: AlarmCenterPage.qml  DeviceDiagnosisPage.qml  LogRecordPage.qml  ParameterConfigPage.qml  RealtimeMonitorPage.qml  SystemSettingsPage.qml
pyside6_qml_industrial_client/tests/: test_backend_state.py
scripts/: build_linux.sh  build_mac.sh  dev.sh  package_deb.sh  test.sh
src/app/: app_context.py  main.py
src/app/adapters/: algo_config_renderer.py  file_watch_adapter.py  json_result_parser.py  psutil_adapter.py
src/app/config/: algorithm_settings.py  client_settings.py  config_loader.py
src/app/ingest/: base.py  channel_manager.py  file_channel.py  http_channel.py  tcp_channel.py  (+2 more)
tests/: test_algorithm_config_service.py  test_channel_manager.py  test_config_service.py  test_json_result_parser.py  test_metrics_service.py  test_parser_registry.py
(+21 files in other folders)
