[project]
name = "single-piece-qml-client"
version = "0.1.0"
description = "Industrial PySide6 + QML desktop client prototype for single-piece separation control system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7.0",
]

[project.scripts]
single-piece-qml-client = "single_piece_qml_client.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
