[project]
name = "single-piece-qml-client"
version = "0.1.0"
description = "PySide6 QML industrial desktop UI for single-piece separation stations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "yuan2go" }]
license = { text = "MIT" }
dependencies = [
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1",
]

[project.scripts]
single-piece-qml-client = "single_piece_qml_client.main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/single_piece_qml_client"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
